[package]
name = "si-account"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[[bin]]
name = "si-account-server"
path = "src/bin/server.rs"
edition = "2018"

[dependencies]
anyhow = "1.0"
uuid = { version = "0.7", features = [ "serde", "v4" ] }
tonic = "0.1.0-alpha.6"
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = { version = "=0.2.0-alpha.6", features = [ "process" ] }
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc", "compat"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
couchbase = { path = "../../vendor/couchbase-rs/couchbase" }
tracing = "0.1.10"
tracing-futures = { version = "0.1.1", features = ["tokio", "std-future"] }
tracing-subscriber = "0.1.6"
thiserror = "1.0"
config = { version = "0.9.3", features = [ "toml" ] }
sodiumoxide = "0.2"
toml = "0.5"
serde_cbor = "0.10"
base64 = "0.10.1"
names = "0.11"
tempfile = "3.1"
biscuit = "0.4.1"

# Local Deps
si-settings = { path = "../si-settings" }
si-data = { path = "../si-data" }

[dev-dependencies]
lazy_static = "1.4"
tracing-subscriber = "0.1.6"
tracing-opentelemetry = "0.1.0"

[build-dependencies]
tonic-build = { version = "0.1.0-alpha.6" }
prost-build = "0.5"
