[package]
name = "si-account"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[[bin]]
name = "si-account-server"
path = "src/bin/server.rs"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4.13"
couchbase = { path = "../../vendor/couchbase-rs/couchbase" }
futures = { version = "0.3", features = ["alloc"] }
opentelemetry = { version = "0.6", features = ["tonic"] }
opentelemetry-jaeger = "0.5"
paho-mqtt = "0.8"
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
si-transport = { path = "../si-transport" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["tokio", "std-future"] }
tracing-opentelemetry = "0.5"
tracing-subscriber = "0.2.0-alpha.2"

[dev-dependencies]
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.2"
