[package]
name = "si-agent"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", features = ["alloc"] }
si-transport = { path = "../si-transport" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1.12"
