[package]
name = "si-core"
version = "0.1.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"

[[bin]]
name = "si-core"
path = "src/bin/server.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
opentelemetry = { version = "0.6", features = ["tonic"] }
opentelemetry-jaeger = "0.5"
prost = "0.6"
serde = { version = "1.0.114", features = ["derive"] }
si-account = { path = "../si-account" }
si-cea = { path = "../si-cea" }
si-data = { path = "../si-data" }
si-settings = { path = "../si-settings" }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["tokio", "std-future"] }
tracing-opentelemetry = "0.5.0"
tracing-subscriber = "0.2.0-alpha.2"

[build-dependencies]
tonic-build = "0.2.0"
