[package]
name = "si-cyclone"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO(fnichol): remove "client" feature from default
default = ["client", "server"]

client = [
  "async-trait",
  "futures-lite",
  "http",
  "hyperlocal",
  "tokio-tungstenite",
]

server = [
  "axum",
  "bytes-lines-codec",
  "clap",
  "color-eyre",
  "derive_builder",
  "opentelemetry",
  "opentelemetry-otlp",
  "opentelemetry-semantic-conventions",
  "pin-project-lite",
  "tokio-serde",
  "tokio-util",
  "tower",
  "tower-http",
  "tracing-opentelemetry",
  "tracing-subscriber",
]

[dependencies]
# server and client
futures = { version = "0.3.17" }
hyper = { version = "0.14", features = ["client", "http1", "runtime", "server"] }
nix = { version = "0.23.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "1.0" }
tokio = { version = "1.12.0", features = ["full"] }
tracing = { version = "0.1" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

# client only
async-trait = { version = "0.1.51", optional = true }
futures-lite = { version = "1.12.0", optional = true }
http = { version = "0.2.5", optional = true }
hyperlocal = { version = "0.8.0", default-features = false, features = ["client"], optional = true }
tokio-tungstenite = { version = "0.15.0", optional = true }

# server only
axum = { version = "0.2.5", features = ["ws"], optional = true }
bytes-lines-codec = { path = "../bytes-lines-codec", optional = true }
clap = { version = "3.0.0-beta.4", optional = true }
color-eyre = { version = "0.5.11", optional = true }
derive_builder = { version = "0.10.2", optional = true }
opentelemetry = { version = "0.16.0", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.9.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.8.0", optional = true }
pin-project-lite = { version = "0.2.7", optional = true }
tokio-serde = { version = "0.8.0", features = ["json"], optional = true }
tokio-util = { version = "0.6.8", features = ["codec"], optional = true }
tower = { version = "0.4.8", optional = true }
tower-http = { version = "0.1", features = ["trace"], optional = true }
tracing-opentelemetry = { version = "0.15.0", optional = true }
tracing-subscriber = { version = "0.2.19", optional = true }

[dev-dependencies]
tempfile = { version = "3.2.0" }
