[package]
name = "si-data"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

[[bin]]
name = "si-keygen"
path = "src/bin/keygen.rs"
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.12"
bytes = "0.5"
couchbase = { path = "../../vendor/couchbase-rs/couchbase" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
prost = "0.6"
prost-derive = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
si-settings = { path = "../si-settings" }
sodiumoxide = "0.2"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
tonic = "0.2"
tracing = "0.1.10"
tracing-futures = { version = "0.2", features = ["tokio", "std-future"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
lazy_static = "1.4"
tracing-subscriber = "0.2"
ureq = "1.2"
