[package]
name = "si-data"
version = "0.1.0"
authors = ["Adam Jacob <adam@systeminit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.9.0"
lazy_static = "1.4.0"
refinery = { version = "0.5.0", features = ["tokio-postgres", "tokio"] }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = "0.7.0"
si-settings = { path = "../si-settings" }
serde = "1.0.123"
strum = "0.21.0"
strum_macros = "0.21.1"
reqwest = "0.11.1"
serde_json = "1.0.64"
async-nats = "0.9.4"
